some error handling and cosmetics

--- a/MusicMojo/en.lproj/File.strings
+++ b/MusicMojo/en.lproj/File.strings
@@ -11,3 +11,6 @@
 "Songs" = "Songs";
 "Music Mojo" = "Music Mojo";
 "Lyrics" = "Lyrics";
+"Oops!" = "Oops!";
+"Somme Error Happened" = "Somme Error Happened";
+
